--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "ghostdrop",
-  "private": true,
-  "version": "0.0.0",
+  "name": "ghostdrop-server",
+  "version": "1.0.0",
+  "description": "Backend server for GhostDrop to securely handle API keys.",
+  "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node backend/server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "@google/genai": "latest"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@google/genai": "^0.15.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
