--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "ghostdrop-server",
+  "name": "ghostdrop-app",
   "version": "1.0.0",
-  "description": "Backend server for GhostDrop to securely handle API keys.",
-  "main": "backend/server.js",
+  "description": "GhostDrop — Disposable inbox that disappears on demand",
+  "main": "index.html",
   "type": "module",
   "scripts": {
-    "start": "node backend/server.js"
+    "dev": "netlify dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/genai": "^0.15.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "@google/genai": "^0.15.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.23.2"
   }
 }
