feat: Refactor Gemini chat to client-managed history
This commit overhauls the Gemini chat functionality by shifting session management from the server to the client.

The server's in-memory `chatSessions` map has been removed. Instead, the client now sends its message along with the existing conversation history. The backend and Netlify function then use this provided history to initialize a new chat session with the Gemini API, ensuring continuity without server-side state.

Key changes include:
- Updating `package.json` to include `dotenv` and `express` for the new backend server structure.
- Modifying `backend/server.js` to handle client-provided history and remove server-side session management.
- Adjusting `netlify/functions/gemini-chat.js` to receive and return the complete chat history, enabling client-side persistence.
- Removing the old `.env` file entry as it was no longer valid.
- Updating the `start` script in `package.json` to reflect the new backend server entry point.

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.html",
   "type": "module",
   "scripts": {
-    "dev": "netlify dev"
+    "start": "node backend/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/genai": "^0.15.0"
-  },
-  "devDependencies": {
-    "netlify-cli": "^17.23.2"
+    "@google/genai": "^0.15.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
