--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.html",
   "type": "module",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "echo \"This is a static app. Open index.html in a browser.\" && exit 0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/genai": "^0.15.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "@google/genai": "^0.15.0"
   }
 }
